--- a/src/styles.css
+++ b/src/styles.css
@@ -236,6 +236,9 @@ body {
   font-display: column;
   align-items: center;
 }
+.blog-card{
+ padding: 0 30px ;
+}
 .blog-img {
   border-left: 20px solid var(--accent-color);
   width: 100%;
@@ -298,6 +301,9 @@ flex-wrap: wrap;
     padding: 0 15px;
     font-size: 18px;
   }
+  .social-media-link:hover{
+    color: #696969;
+  }
   .subcribe-container{
     margin-left: 40px;
   }
@@ -315,7 +321,8 @@ flex-wrap: wrap;
     height: 35px;
   }
   .subscribe-btn{
-    padding: 11px 30px 10px;
+    padding: 10px 30px 10px;
+    height: 35px;
     border-radius: 5px;
     border: none;
     background-color: #FFFFFF;
@@ -323,4 +330,22 @@ flex-wrap: wrap;
      font-size: 12px;
     font-weight: 700;
   letter-spacing: 2px;
+  transition: all 4ms ease-in-out;
+  }
+  .subscribe-btn:hover{
+    background-color: #d1cece;
+
+  }
+  .created{
+    font-size: 14px;
+    padding-left: 70px;
+    padding-bottom: 10px;
+  }
+  .created a {
+    color: var(--text-color);
+    text-decoration: none;
+    
+  }
+  .created a:hover{
+    color: #696969;
   }
